# segment-anything-2-real-time-server-ros1

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: PoseEstimate.action
config/: label_map.json
launch/: cam_tf_broadcast.launch  cosypose_server.launch  happypose_server.launch  happypose_server_rgbd.launch  record_bag.launch
msg/: ObjectRequestInfo.msg  ObjectRequestInfoArray.msg
scripts/: centroid_computation.py  cosypose_client.py  cosypose_client_sim.py  cosypose_example.py  cosypose_server.py  cosypose_server_sim.py  efk_test.py  ekf.py  ekf_test.py  filter.py  happypose_client.py  happypose_server.py  happypose_server_rgbd.py  happypose_server_sim.py  sam2_client.py  sam2_client_rgbd.py  sam2_tracker_server.py
